[project]
name = "test-package"
version = "0.1.0"
description = "Test package for Github Actions Workflow that downloads the Github Dependency Graph SBOM and transforms it into CycloneDX format"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
